Fix ClassNotFoundException with Java 9
I am getting a ClassNotFoundException with Java 9 installed on my machine. I've found people solving the same issue in Figwheel: https://github.com/bhauman/lein-figwheel/issues/612. After adding this parameter the exception is gone.